argo-apps/jira/int/templates/jira-int-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  namespace: jira-int
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jira-int.catena-x.polygran.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira-int
                port:
                  number: 80
